fix ui bug, left and right sidebars are partly not visible

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@ body {
 
     /* User card */
     .user-card {
-        @apply flex flex-col justify-between gap-4 max-xs:rounded-xl max-xs:bg-dark-3 max-xs:p-4 xs:flex-row xs:items-center;
+        @apply flex flex-col justify-between gap-4 rounded-xl bg-dark-2 xs:flex-row xs:items-center;
     }
 
     .user-card_avatar {
@@ -67,7 +67,7 @@ body {
     }
 
     .topbar {
-        @apply fixed top-0 z-30 flex w-full items-center justify-between bg-dark-2 px-6 py-3;
+        @apply fixed top-0 z-30 flex w-full items-center justify-between bg-dark-2 px-6 py-3 h-[72px];
     }
 
     .bottombar {
@@ -82,8 +82,14 @@ body {
         @apply relative flex flex-col items-center gap-2 rounded-lg p-2 sm:flex-1 sm:px-2 sm:py-2.5;
     }
 
+    .leftsidebar,
+    .rightsidebar {
+        height: calc(100vh - 72px);
+        scrollbar-width: thin;
+    }
+
     .leftsidebar {
-        @apply sticky left-0 top-0 z-20 flex h-screen w-fit flex-col justify-between overflow-auto border-r border-r-dark-4 bg-dark-2 pb-5 pt-28 max-md:hidden;
+        @apply sticky left-0 top-[72px] z-20 flex w-fit flex-col justify-between overflow-auto border-r border-r-dark-4 bg-dark-2 py-6 max-md:hidden;
     }
 
     .leftsidebar_link {
@@ -95,7 +101,7 @@ body {
     }
 
     .rightsidebar {
-        @apply sticky right-0 top-0 z-20 flex h-screen w-fit flex-col justify-between gap-12 overflow-auto border-l border-l-dark-4 bg-dark-2 px-10 pb-6 pt-28 max-xl:hidden;
+        @apply sticky right-0 top-[72px] z-20 flex w-fit flex-col justify-between gap-12 overflow-auto border-l border-l-dark-4 bg-dark-2 px-10 py-6 max-xl:hidden;
     }
 }
 
